Skip button added to home, more images added to about

--- a/content_creation.html
+++ b/content_creation.html
@@ -31,10 +31,11 @@
                 <h1>Content <span class="orange">Creation</span></h1>
             </div>
             <div id="video_desc" class="page_card">
-                <p>Content Overview: Music, games, etc. lorem ipsum dolor sit amet, consectetur adipiscing elit, 
-                    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut 
-                    enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex 
-                    ea commodo consequat.</p>
+                <p>Austin is active on YouTube as muthybaby. There, he posts videos showcasing his arrangements,
+                    collaborations, and video editing skills. He is accompanied in these videos by his friends
+                    and peers. Be on the lookout for jazz standards posted weekly and perhaps even gaming-related 
+                    content!
+                </p>
             </div>
             <a href="https://www.youtube.com/channel/UC6AO7AsbFpjEsR_N7eI0t7A" class="w3-button" id="channel_link">Check out my channel!</a>
             <div id="video_section1" class="page_card">
