--- a/music.html
+++ b/music.html
@@ -31,11 +31,14 @@
                 <h1>Music</h1>
             </div>
             <div id="music_ov" class="page_card">
-                <p>Music Overview - genres played, groups you are a part of, inspirations, etc.
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
-                    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut 
-                    enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex 
-                    ea commodo consequat.
+                <p>Austin Muthyala is a versatile musician that can blend into a variety of musical
+                    styles. At 21 years old, as a member of MSU Jazz Orchestra he had the opportunity to
+                    perform with many of today’s celebrated musicians such as: Terell Stafford, Melissa
+                    Aldana, Harvey Mason, Tim Warfield, and Kenny Washington. He is a Geri Allen fellow
+                    and a member of the Gathering Orchestra under the direction of Rodney Whitaker.
+                    In addition, professionally, he is a core member of Orquesta RITMO, one of the premier
+                    salsa bands in West Michigan, as well as Global Village, SLOAN and the Filthy
+                    Animals, and the BlueWater Kings organization
                 </p>
             </div>
             <div id="music_imgs" class="imgs_container">
@@ -45,16 +48,12 @@
                 <img class="large_img" src="images/music/octet.jpg" alt="Austin's octet">
             </div>
             <div id="music_studies" class="page_card">
-                <p>Schooling at MSU, teachers, people studied with, etc.
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
-                    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut 
-                    enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex 
-                    ea commodo consequat. <br> <br>
-                    Offer lessons? Events that will play? etc.
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
-                    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut 
-                    enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex 
-                    ea commodo consequat.
+                <p>Austin is currently in his senior year at Michigan State University, where he is pursuing
+                    a Bachelor of Music in Jazz Studies. There, he currently studies with Etienne Charles and performs
+                    in ensembles under the direction of Rodney Whitaker. In the past, Austin has studied with Alphonso Horne,
+                    Marcus Printup, Max Colley III, and others.<br> <br>
+                    Please fill out the form on the Contact page if you are interested in hiring Austin for a gig, studying with
+                    him, or collaborating with him.
                 </p>
             </div>
         </main>
