--- a/about.html
+++ b/about.html
@@ -32,16 +32,9 @@
             </div>
             <div id="about_bio" class="page_card">
                 <p>Austin Muthyala is a young and upcoming jazz trumpet player from Byron
-                    Center, Michigan. He is a versatile musician that can blend into a variety of musical
-                    styles. At 21 years old, as a member of MSU Jazz Orchestra he had the opportunity to
-                    perform with many of today’s celebrated musicians such as: Terell Stafford, Melissa
-                    Aldana, Harvey Mason, Tim Warfield, and Kenny Washington. He is a Geri Allen fellow
-                    and a member of the Gathering Orchestra under the direction of Rodney Whitaker. <br><br>
-                    In addition, professionally, he is a core member of Orquesta RITMO, one of the premier
-                    salsa bands in West Michigan, as well as Global Village, SLOAN and the Filthy
-                    Animals, and the BlueWater Kings organization. He is a student of Etienne Charles in his
-                    senior year at Michigan State University. Currently, he is a member of the local music
-                    scene in Lansing, MI.<br><br>
+                    Center, Michigan. He has twelve years of experience with his instrument.
+                    Austin has performed throughout the world, including in Japan, New York City, and across
+                    Michigan. Currently, he is an active member of the local music scene in Lansing, MI.<br><br>
                     Most recently, Austin has begun the path of content creation by creating his
                     YouTube channel, muthybaby. Inspired by his favorite content creators (YouTubers and
                     streamers alike), he decided to take the plunge and use the new platform as another
@@ -49,9 +42,15 @@
             </div>
             <div id="about_imgs" class="imgs_container">
                 <img class="small_img" src="images/about/ace.jpg" alt="Austin by the ACE sign">
-                <img class="small_img" src="images/about/pose.jpg" alt="Austin playing the trumpet">
                 <img class="small_img" src="images/about/solo.jpg" alt="Austin performing a solo">
+                <img id="japan_band" class="large_img" src="images/about/japan_band.png" alt="Austin and his band in Japan">
+                <img class="small_img" src="images/about/pose.jpg" alt="Austin playing the trumpet">
                 <img class="small_img" src="images/about/friends.jpg" alt="Austin and friends">
+                <img class="small_img" src="images/contact/solo2.jpg" alt="Austin taking a solo">
+                <img class="small_img" src="images/contact/solo3.jpg" alt="Austin taking a solo">
+                <img id="the_boys" class="large_img" src="images/contact/the_boys.jpg" alt="Austin and the boys">
+                <img class="small_img" src="images/contact/wynton.jpg" alt="Austin and Wynton Marsalis">
+                <img class="small_img" src="images/contact/solo4.jpg" alt="Austin taking a solo">
             </div>
             <div id="about_hobbies" class="page_card">
                 <p>When he is not playing music, you can find Austin gaming with his friends, editing videos,
