--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
     <body id="main_body">
         <header>
+            <a class = "skip" href="#home_main">Skip to Content</a>
             <nav>
                 <ul class="navigation_list">
                     <li><a class="current_page" class="nav_link" href="index.html">Home</a></li>
