--- a/gigs_events.html
+++ b/gigs_events.html
@@ -29,28 +29,28 @@
         <main id="gigs_main">
             <h1>Gigs <span class="orange">and</span> Events</h1>
             <div class="left_stick">
-                <p class="gigs_content">Latest Gig</p>
+                <p class="gigs_content">November 6, 7 PM<br>With Orquesta Ritmo<br>UrbanBeat, Lansing, MI</p>
             </div>
             <div class="right_stick">
-                <p class="gigs_content">Gig 2</p>
+                <p class="gigs_content">October 30, 7 PM<br>With Orquesta Ritmo<br>UrbanBeat, Lansing, MI</p>
             </div>
             <div class="left_stick">
-                <p class="gigs_content">Gig 3</p>
+                <p class="gigs_content">October 23, 7 PM<br>With Orquesta Ritmo<br>UrbanBeat, Lansing, MI</p>
             </div>
             <div class="right_stick">
-                <p class="gigs_content">Gig 4</p>
+                <p class="gigs_content">October 9, 7 PM<br>With Orquesta Ritmo<br>UrbanBeat, Lansing, MI</p>
             </div>
             <div class="left_stick">
-                <p class="gigs_content">Gig 5</p>
+                <p class="gigs_content">October 2, 7 PM<br>With Orquesta Ritmo<br>UrbanBeat, Lansing, MI</p>
             </div>
             <div class="right_stick">
-                <p class="gigs_content">Gig 6</p>
+                <p class="gigs_content">September 25, 7 PM<br>With Orquesta Ritmo<br>UrbanBeat, Lansing, MI</p>
             </div>
             <div class="left_stick">
-                <p class="gigs_content">Gig 7</p>
+                <p class="gigs_content">September 18, 7 PM<br>With Orquesta Ritmo<br>UrbanBeat, Lansing, MI</p>
             </div>
             <div class="right_stick">
-                <p class="gigs_content">Gig 8</p>
+                <p class="gigs_content">September 4, 7 PM<br>With Orquesta Ritmo<br>UrbanBeat, Lansing, MI</p>
             </div>
             <div id="gigs_imgs" class="imgs_container">
                 <img class="large_img" src="images/gigs/salsa.jpg" alt="Austin and his salsa band">
