--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
 
     <body>
         <header>
-            <a class = "skip" href="#main">Skip to Content</a>
+            <a class = "skip" href="#contact_main">Skip to Content</a>
             <nav>
                 <ul class="navigation_list">
                     <li><a class="nav_link" href="index.html">Home</a></li>
@@ -50,7 +50,7 @@
                     <label for="email">Email Address</label>
                     <input type="text" id="email" name="email" placeholder="Your email address">
                 
-                    <label for="message text">Message Text</label>
+                    <label for="message">Message Text</label>
                     <textarea id="message" name="message" placeholder="Write your message here"></textarea>
                 
                     <input id="submit" type="submit" value="Submit">
