--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <link rel="shortcut icon" type="image/jpg" href="images/mb_icon.jpg"/>
         <link rel="stylesheet" type="text/css" href="css/html5reset.css">
         <link rel="stylesheet" type="text/css" href="css/style.css">
+        <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet"> 
         <title>Austin Muthyala</title>
     </head>
 
