Fixed skip button

--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
 
     <body id="main_body">
         <header>
-            <a class = "skip" href="#home_main">Skip to Content</a>
+            <div class="skip">
+                <a href="#home_main">Skip to Content</a>
+            </div>
             <nav>
                 <ul class="navigation_list">
                     <li><a class="current_page" class="nav_link" href="index.html">Home</a></li>
