--- a/music.html
+++ b/music.html
@@ -13,7 +13,9 @@
 
     <body>
         <header>
-            <a class = "skip" href="#music_main">Skip to Content</a>
+            <div class="skip">
+                <a href="#music_main">Skip to Content</a>
+            </div>
             <nav>
                 <ul class="navigation_list">
                     <li><a class="nav_link" href="index.html">Home</a></li>
