--- a/content_creation.html
+++ b/content_creation.html
@@ -13,7 +13,9 @@
 
     <body>
         <header>
-            <a class = "skip" href="#video_main">Skip to Content</a>
+            <div class="skip">
+                <a href="#video_main">Skip to Content</a>
+            </div>
             <nav>
                 <ul class="navigation_list">
                     <li><a class="nav_link" href="index.html">Home</a></li>
@@ -40,7 +42,7 @@
             <a href="https://www.youtube.com/channel/UC6AO7AsbFpjEsR_N7eI0t7A" class="w3-button" id="channel_link">Check out my channel!</a>
             <div id="video_section1" class="page_card">
                 <h2>Weekly Standard</h2>
-                <iframe src="https://youtube.com/embed/nhDXVvV-UZQ" width="306" height="150" frameborder="0" allow="accelerometer; 
+                <iframe title="weekly_standard" src="https://youtube.com/embed/nhDXVvV-UZQ" width="306" height="150" frameborder="0" allow="accelerometer; 
                 autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 <p>Welcome to the 2nd standard of the week! We are covering Just Friends, a very popular jazz standard. We sincerely 
                     hope you enjoy! More is on the way, so please like and subscribe for more!!
@@ -56,7 +58,7 @@
             </div>
             <div id="video_section2" class="page_card">
                 <h2>Featured Video</h2>
-                <iframe src="https://www.youtube.com/embed/qxV4HOrIyDw" width="306" height="150" frameborder="0" allow="accelerometer; 
+                <iframe title="featured_vid" src="https://www.youtube.com/embed/qxV4HOrIyDw" width="306" height="150" frameborder="0" allow="accelerometer; 
                 autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 <p>This is my arrangement of Nobou Utemasu's gorgeous song "Tifa's Theme" from FF7. 
                     I've mixed in some elements of Jazz and Candombe (Afro-Uruguayan Folk music), and 
