--- a/contact.html
+++ b/contact.html
@@ -12,9 +12,15 @@
     </head>
 
     <body>
+        <div class="skip">
+            <a href="#contact_main">Skip to Content</a>
+        </div>
         <header>
-            <div class="skip">
-                <a href="#contact_main">Skip to Content</a>
+            <div class="logo">
+                <img class="header_logo" src="images/mb_icon.jpg" alt="Muthybaby Logo"> 
+            </div>
+            <div class="title">
+                <h1>Austin Muthyala</h1>
             </div>
             <nav>
                 <ul class="navigation_list">
@@ -73,3 +79,5 @@
         </footer>
         
     </body>
+
+</html>
