--- a/gigs_events.html
+++ b/gigs_events.html
@@ -12,9 +12,15 @@
     </head>
 
     <body>
+        <div class="skip">
+            <a href="#gigs_main">Skip to Content</a>
+        </div>
         <header>
-            <div class="skip">
-                <a href="#gigs_main">Skip to Content</a>
+            <div class="logo">
+                <img class="header_logo" src="images/mb_icon.jpg" alt="Muthybaby Logo"> 
+            </div>
+            <div class="title">
+                <h1>Austin Muthyala</h1>
             </div>
             <nav>
                 <ul class="navigation_list">
@@ -65,3 +71,5 @@
             <p>Website designed by Sam Winter 2020</p>
         </footer>
     </body>
+
+</html>
