Mobile collapsible nav implemented on each page

--- a/gigs_events.html
+++ b/gigs_events.html
@@ -18,7 +18,7 @@
         </div>
         <header>
             <div class="drop">
-                <button onclick="dropdownToggle()" class="drop_button">Menu</button>
+                <button onclick="dropdownToggle()" class="drop_button">- Menu -</button>
                 <nav class="drop_list">
                     <li><a class="nav_link" href="index.html">Home</a></li>
                     <li><a class="nav_link" href="about.html">About</a></li>
