Desktop navigation added

--- a/contact.html
+++ b/contact.html
@@ -17,6 +17,10 @@
             <a href="#contact_main">Skip to Content</a>
         </div>
         <header>
+            <div class="name">
+                <img src="images/mb_icon.jpg" alt="Muthybaby logo">
+                <h1>Austin Muthyala</h1>
+            </div>
             <div class="drop">
                 <button onclick="dropdownToggle()" class="drop_button">- Menu -</button>
                 <nav class="drop_list">
