--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
 
     <body id="main_body">
         <header>
+            <div class="name">
+                <img src="images/mb_icon.jpg" alt="Muthybaby logo">
+                <h1>Austin Muthyala</h1>
+            </div>
             <div class="drop">
                 <button onclick="dropdownToggle()" class="drop_button">- Menu -</button>
                 <nav class="drop_list">
