--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <h1>Austin Muthyala</h1>
             </div>
             <div class="drop">
-                <button onclick="dropdownToggle()" class="drop_button">- Menu -</button>
+                <button onclick="dropdownToggle()" class="drop_button" name="Menu Button"></button>
                 <nav class="drop_list">
                     <li><a class="current_page" class="nav_link" href="index.html">Home</a></li>
                     <li><a class="nav_link" href="about.html">About</a></li>
