Parallax image added to tablet

--- a/gigs_events.html
+++ b/gigs_events.html
@@ -45,7 +45,9 @@
         </header>
 
         <main id="gigs_main">
-            <h1>Gigs <span class="orange">and</span> Events</h1>
+            <div class="headlines" id="gigs_headline">
+                <h1>Gigs and Events</h1>
+            </div>
             <div class="left_stick">
                 <p class="gigs_content">November 6, 7 PM<br>With Orquesta Ritmo<br>UrbanBeat, Lansing, MI</p>
             </div>
