Finished desktop view, mobile about images limited

--- a/about.html
+++ b/about.html
@@ -73,11 +73,12 @@
                 <img id="japan_band" class="large_img" src="images/about/japan_band.png" alt="Austin and his band in Japan">
                 <img class="small_img" src="images/about/pose.jpg" alt="Austin playing the trumpet">
                 <img class="small_img" src="images/about/friends.jpg" alt="Austin and friends">
-                <img class="small_img" src="images/contact/solo2.jpg" alt="Austin taking a solo">
-                <img class="small_img" src="images/contact/solo3.jpg" alt="Austin taking a solo">
-                <img id="the_boys" class="large_img" src="images/contact/the_boys.jpg" alt="Austin and the boys">
-                <img class="small_img" src="images/contact/wynton.jpg" alt="Austin and Wynton Marsalis">
-                <img class="small_img" src="images/contact/solo4.jpg" alt="Austin taking a solo">
+                
+                <img class="small_img extra_img" src="images/contact/solo2.jpg" alt="Austin taking a solo">
+                <img class="small_img extra_img" src="images/contact/solo3.jpg" alt="Austin taking a solo">
+                <img id="the_boys" class="large_img extra_img" src="images/contact/the_boys.jpg" alt="Austin and the boys">
+                <img class="small_img extra_img" src="images/contact/wynton.jpg" alt="Austin and Wynton Marsalis">
+                <img class="small_img extra_img" src="images/contact/solo4.jpg" alt="Austin taking a solo">
             </div>
             <div id="about_hobbies" class="page_card">
                 <p>When he is not playing music, you can find Austin gaming with his friends, editing videos,
