(hopefully) Final accessibility fix!

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         </header>
 
         <main id="home_main">
-            <div class="flip">
+            <div class="flip" tabindex="7">
                 <div class="flip_inner">
                     <div class="flip_front">
                         <img class="home_img" src="images/mb_icon.jpg" alt="Muthybaby logo" style="width:300px;height:300px;">
