--- a/content_creation.html
+++ b/content_creation.html
@@ -69,10 +69,10 @@
                 <h2>Weekly Standard</h2>
                 <iframe title="weekly_standard" src="https://youtube.com/embed/nhDXVvV-UZQ" width="306" height="150" frameborder="0" 
                 allowfullscreen="true"></iframe>
-                <p>Welcome to the 2nd standard of the week! We are covering Just Friends, a very popular jazz standard. We sincerely 
+                <p class="extras_p">Welcome to the 2nd standard of the week! We are covering Just Friends, a very popular jazz standard. We sincerely 
                     hope you enjoy! More is on the way, so please like and subscribe for more!!
                     <br>HUGE SHOUT OUT TO THE  OTHER MEMBERS OF THE BAND (YOU GUYS KILLED IT)</p>
-                <div class="feature_list">
+                <div class="feature_list extras_div">
                     <h3>Personnel:</h3>
                     <ul>
                         <li>Emma Wilburn - Bass</li>
@@ -85,10 +85,10 @@
                 <h2>Featured Video</h2>
                 <iframe title="featured_vid" src="https://www.youtube.com/embed/qxV4HOrIyDw" width="306" height="150" frameborder="0"
                 allowfullscreen="true"></iframe>
-                <p>This is my arrangement of Nobou Utemasu's gorgeous song "Tifa's Theme" from FF7. 
+                <p class="extras_p">This is my arrangement of Nobou Utemasu's gorgeous song "Tifa's Theme" from FF7. 
                     I've mixed in some elements of Jazz and Candombe (Afro-Uruguayan Folk music), and 
                     my best friends really brought this arrangement to life.</p>
-                <div class="feature_list">
+                <div class="feature_list extras_div">
                     <h3>Special thanks to:</h3>
                     <ul>
                         <li>Liany Mateo - Bass</li>
