Added skip tab to home page

--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
     </head>
 
     <body id="main_body">
+        <div class="skip" tabindex="0">
+            <a href="#home_main">Skip to Content</a>
+        </div>
         <header>
             <div class="name">
                 <img src="images/mb_icon.jpg" alt="Muthybaby logo">
@@ -41,18 +44,18 @@
             </div>
             <nav class="nav2">
                 <ul class="navigation_list">
-                    <li><a class="current_page" class="nav_link" href="index.html">Home</a></li>
-                    <li><a class="nav_link" href="about.html">About</a></li>
-                    <li><a class="nav_link" href="music.html">Music</a></li>
-                    <li><a class="nav_link" href="content_creation.html">Videos</a></li>
-                    <li><a class="nav_link" href="gigs_events.html">Gigs</a></li>
-                    <li><a class="nav_link" href="contact.html">Contact</a></li>
+                    <li><a class="current_page" class="nav_link" href="index.html" tabindex="0">Home</a></li>
+                    <li><a class="nav_link" href="about.html" tabindex="0">About</a></li>
+                    <li><a class="nav_link" href="music.html" tabindex="0">Music</a></li>
+                    <li><a class="nav_link" href="content_creation.html" tabindex="0">Videos</a></li>
+                    <li><a class="nav_link" href="gigs_events.html" tabindex="0">Gigs</a></li>
+                    <li><a class="nav_link" href="contact.html" tabindex="0">Contact</a></li>
                 </ul>
             </nav>
         </header>
 
         <main id="home_main">
-            <div class="flip" tabindex="7">
+            <div class="flip" tabindex="0">
                 <div class="flip_inner">
                     <div class="flip_front">
                         <img class="home_img" src="images/mb_icon.jpg" alt="Muthybaby logo" style="width:300px;height:300px;">
